space组件封装  useslot获取子元素

--- a/lib/assets/styles/style.scss
+++ b/lib/assets/styles/style.scss
@@ -3,4 +3,6 @@ $success: #67C23A;
 $warning: #E6A23C;
 $error: #F56C6C;
 $info: #909399;
-$text: #303133
+$text: #303133;
+$color: #505050;
+$border: #d4d3d3
